gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: tcp-gateway
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - hosts:
    - '*.cc954ef.kyma-stage.shoot.live.k8s-hana.ondemand.com'
    port:
      name: http
      number: 80
      protocol: HTTP
