service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: sfs-entry
spec:
  hosts:
    - web-0.nginx.test.svc.cluster.local
  location: MESH_INTERNAL
  ports:
    - name: http
      number: 80
      protocol: TCP
  resolution: DNS
