vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: http-vs
spec:
  gateways:
  - test/tcp-gateway
  hosts:
  - rcs-test.cc954ef.kyma-stage.shoot.live.k8s-hana.ondemand.com
  http:
  - corsPolicy:
      allowHeaders:
      - Authorization
      - Content-Type
      - '*'
      allowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      allowOrigins:
      - regex: .*
    match:
    - uri:
        regex: /.*
    route:
    - destination:
        host: web-0.nginx.test.svc.cluster.local
        port:
          number: 80
      weight: 100
